--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".FoodFragment"
+    android:id="@+id/food_display_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -35,8 +36,8 @@
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
         android:text="Add To Cart"
+        style ="@style/PortraitButtonStyle"
         android:id="@+id/return_to_menu"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
